2002-03-19  Richard Hestilow  <hestilow@ximian.com>

	* preferences.h (wallpaper_type_t): Remove EMBOSSED since we
	don't support it.
	
	* preferences.c:
	(_bg_wptype_values, _bg_orientation_values): Move name values
	to nick, change name to "correct" form.
	(read_wptype_from_string, bg_preferences_get_wptype_as_string):
	Remove EMBOSSSED option.
	
	* preview-file-selection.[ch]: Add function
	preview_file_selection_intelligent_scale.

	* applier.c: Change MONITOR_CONTENTS_WIDTH/HEIGHT to 64/48
	(correct monitor ratio).
	(bg_applier_apply_prefs): Disable wallpaper if WPTYPE_NONE.
	(bg_applier_get_preview_widget): Create to WIDTH/HEIGHT.
	(get_geometry): Remove reference to EMBOSSED.

2002-03-17  Darin Adler  <darin@bentspoon.com>

	* preferences.c: (bg_preferences_merge_entry):
	Use G_GNUC_FUNCTION so we're not gcc-specific.

2002-03-15  Seth Nickell  <snickell@stanford.edu>

	* preferences.c: (bg_preferences_load),
	(bg_preferences_merge_entry), (read_wptype_from_string),
	(read_color_from_string), (bg_preferences_get_wptype_as_string):
	* preferences.h:

	Add an enum type for specifying that we don't know the type (i.e. the
	key was not available, or set to something invalid). Currently it
	was using -1, which barfs with some compilers that set enums
	to be uint.
	
2002-03-09  Richard Hestilow  <hestilow@ximian.com>

	* preview-file-selection.[ch]: Added.

	* Makefile.am: Compile preview-file-selection.c.
	
	* preferences.c (bg_preferences_init): Initialize adjust_opacity
	to FALSE.

2002-03-03  Alexander Larsson  <alla@lysator.liu.se>

	* preferences.c (bg_preferences_save):
	Save wallpaper-enabled too.

2002-02-22  Richard Hestilow  <hestilow@ximian.com>
	
	* preferences.[ch]: Add function bg_preferences_save.
	
2002-02-17  Bradford Hovinen  <hovinen@ximian.com>

	* applier.c (need_root_pixmap_p): We don't need a root pixmap if
	neither a wallpaper nor a gradient is enabled
	(render_to_screen): Use set_back_pixmap/set_background when just